# DougHub

./: .gitignore  README.md  app.py  package-lock.json  package.json  pyproject.toml  setup_models.bat  start_dougdraw.bat  start_invokeai_server.bat  test_cli.db  test_inpaint.py  test_invokeai_connection.py
.github/instructions/: UI-instructions.gemini.md  copilot-UI-Instructions.instructions.md  copilot-instructions.md  gemini.instructions.md  general-instructions.gemini.md  review-changes.gemini.md
.github/prompts/: 01_refactor_deck_list_panel_content.prompt.md  02_implement_collapsible_sections.prompt.md  03_add_deck_filter_and_menu.prompt.md  (+11 more)
InvokeAI/: invokeai.example.yaml  invokeai.yaml
docs/: AUDIT_SUMMARY.md  AUTOMATIC_PERSISTENCE.md  EXTRACTION_RULES.md  IMPLEMENTATION_SUMMARY.md  MANUAL_QA_CHECKLIST.md  NOTESIUM_INTEGRATION_RESOLUTION.md  PERSISTENCE_VALIDATION_QUICK_REFERENCE.md  PERSISTENCE_VALIDATION_SUMMARY.md  PHASE2_VALIDATION_RESULTS.md  PREFLIGHT_IMPLEMENTATION_SUMMARY.md  REFACTORING_UTILS.md  TEST_FIXTURES_UPDATE.md  UI_IMPLEMENTATION.md  UI_USER_GUIDE.md  VALIDATION_IMPLEMENTATION_SUMMARY.md  VALIDATION_PIPELINE.md  VALIDATION_QUICK_REFERENCE.md  roadmap.md
dougdraw/: routes.py
extractions/: README.md
scripts/: README.md  check_db_integrity.py  demo_cli.ps1  extraction_server.py  health_check.py  launch_ui.py  load_test_db.py  run_preflight_checks.py  start_extraction_server.ps1  test_extraction_server.py  test_note_creation.py  validate_metadata_sync.py  verify_ankiconnect.py  verify_cli.ps1
tampermonkey/: README.md  question_extractor.user.js
templates/: dougdraw.html
tests/: __init__.py  conftest.py  test_anki_client.py  test_anki_integration.py  test_domain_logic.py  test_extraction_validation.py  test_grouping.py  test_ingestion.py  test_logging.py  test_metadata_sync.py  test_notebook_config.py  test_notebook_manager.py  test_notebook_navigation.py  test_notebook_notes.py  test_notebook_schema.py  test_parsing.py  test_persistence.py  test_preflight.py  test_question_browser_view.py  test_question_dto.py
(+70 files in other folders)
