[project]
name = "doughub"
version = "0.1.0"
description = "Python-based tooling for Anki deck management with PyQt6 UI"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "typer>=0.9.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
doughub = "doughub.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "respx>=0.21.0",  # For mocking httpx requests
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require Anki running with AnkiConnect (deselect with '-m \"not integration\"')",
    "contract_stage0: Stage 0 - Local invariants (no Anki required)",
    "contract_stage1: Stage 1 - Handshake with live AnkiConnect",
    "contract_stage2: Stage 2 - Core contract checks for required actions",
    "contract_stage3: Stage 3 - Negative-path and robustness checks",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
